Thu Feb 13 00:44:32 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsodbc.h  applied Frediano's SQLULEN patch

Wed Feb 12 22:46:47 CET 2003  Frediano Ziglio <freddy77@angelfire.com>

	* src/ctlib/unittests/ct_options.c:
	- use small hack to check bus error on some machines

Wed Feb 12 15:57:52 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h  src/ctlib/ct.c  src/tds/token.c
	- more untested support for optioncmd

Wed Feb 12 11:02:30 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/unittests/ct_options.c test of unfinished ct_options()

Wed Feb 12 01:10:25 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c removed unused variable
	* include/cspublic.h include/tds.h src/tds/token.c src/ctlib/ct.c
	- more ct_options() support, getting close to useable.  
	* src/ctlib/unittests/Makefile.am src/ctlib/unittests/common.c
	* src/ctlib/unittests/common.h
	- test for ct_options()

Tue Feb 11 00:15:18 EST 20031	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/apps/tsql.c src/tds/config.c
	- provide tds_get_compiletime_settings, view with "tsql -C".
	
Mon Feb 10 21:31:28 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h src/dblib/dblib.c
	- patch from Bill Thompson to support DBNOAUTOFREE.
	
Mon Feb 10 17:34:48 EST 2003	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/ct.c:
	- Fix alignment problem, use CS_BOOL param type where
	  appropriate in ct_options().

Mon Feb 10 17:04:14 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h src/ctlib/ct.c sqsh 1.7 now behaves properly

Mon Feb 10 16:45:15 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c corrected termlen assertion
	* src/odbc/odbc.c define SQLULEN only #ifndef

Mon Feb 10 18:02:34 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/.cvsignore: ignore convert file
	* src/tds/unittests/convert.c: add an include for compiler problem

Sat Feb  8 20:09:45 EST 2003	JK Lowden <jklowden@schemamania.org>